--- a/assignments/assignment_01.html
+++ b/assignments/assignment_01.html
@@ -20,7 +20,7 @@
       <p class="bioText">The Nightingale chart, as shown above, resembles a pie chart. Each sector has the same angle and thus, each category is divided into equal segments. The segments advance in a clockwise manner to plot a cyclic phenomena. The diagram above shows the number of deaths in each month after the troops landed in the Crimea. The size of each segment is determined by its distance from the center. The segments in the diagram above begin reaching outward in the radial direction as the number of deaths increased. An interactive reproduction of Florence Nightingale's original diagram can be found <a href="https://understandinguncertainty.org/coxcombs">here</a>.<br><br>A polar diagram can be created in excel by combing a donut chart and XY scatter chart. The chart is laid out on a polar coordinate system. Rings of the polar grid can be used as a scale to plot the size of the segment. Thus, the value of a segment is represented by its area rather than the radius (see diagram below). Scaling data using radius instead of area would also mislead the reader since the eyes inherently focus on area. However, this also means that the outer segments of the diagram are given more emphasis because of their larger area, thus, disproportionately representing increases in value. </p>
       <img class="bioImage" src="../img/diagram.jpg">
       <h2>Examples</h2>
-      <p class="bioText">Below are some examples of the Polar Area Diagram. 
+      <p class="bioText">Below are some examples of the Polar Area Diagram in practice. 
       <p class="bioText"><a href="../index.html">Home Page</a></p>
     </div>
   </body>
