--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h3>by SHAHNEEZ HASEEB</h3>
     </div>
     <div class="bio">
-      <img class="bioImage" src="img/Bio.jpg">
+      <img class="bioImage" src="img/islamabad.jpg">
       <p class="bioText">I am a student at the <a href="https://www.arch.columbia.edu/">Graduate School of Architecture Planning and Preservation</a> at Columbia University</a>. I study Urban Planning with a focus on Built Environment and Transportation Planning. In the past I've studied Business Administration at <a href="http://nust.edu.pk/INSTITUTIONS/Schools/NBS/Pages/default.aspx">NUST Business School</a>, which is located in Islamabad, Pakistan, my hometown.</p>
     </div>
     <div class=linkList>
@@ -23,6 +23,15 @@
       <ul>
         <li class="assignmentLink"><a href="assignments/assignment_01.html">Assignment 1 - Chart Description</a></li>
         <li class="assignmentLink"><a href="assignments/introp5_01.html">Intro to Javascript p5</a></li>
+        <li class="assignmentLink"><a href="assignments/java2.html">Javascript2</a></li>
+        <li class="assignmentLink"><a href="assignments/java3.html">Javascript3</a></li>
+        <li class="assignmentLink"><a href="assignments/java4.html">Javascript4</a></li>
+        <li class="assignmentLink"><a href="assignments/java5.html">Javascript5</a></li>
+        <li class="assignmentLink"><a href="assignments/java6.html">Javascript6</a></li>
+        <li class="assignmentLink"><a href="assignments/java7.html">Exercise3</a></li>
+        <li class="assignmentLink"><a href="assignments/java8.html">Javascript8</a></li>
+        <li class="assignmentLink"><a href="assignments/java9.html">Javascript9</a></li>
+        <li class="assignmentLink"><a href="assignments/java10.html">Javascript10</a></li>
       </ul>
     </div>
   </body>
