--- a/assignments/java7.html
+++ b/assignments/java7.html
@@ -2,6 +2,11 @@
   <head>
     <title>Weather App</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+
+    <!-- Loading p5.js library -->
+    <script language="javascript" type="text/javascript" src="../libraries/p5.js"></script>
+        <script language="javascript" type="text/javascript" src="../libraries/addons/p5.dom.js"></script>
+
     <script type="text/javascript" src="../js/sketch7.js"></script>
   </head>
      <body>
@@ -9,6 +14,7 @@
     </body>
   <body>
 
+  
     <div class="weather-app">
       <div class="left">
     <div class="temperature"><span id="temperature">0</span>&deg;</div> 
