--- a/assignments/java7.html
+++ b/assignments/java7.html
@@ -17,8 +17,8 @@
   
     <div class="weather-app">
       <div class="left">
-    <div class="temperature"><span id="temperature">0</span>&deg;</div> 
-    <div class="location"><span id="location">Unknown</span></div>
+    <div class="temp"><span id="temp">0</span>&deg;</div> 
+    <div class="location"><span id="location">0</span></div>
       </div>    
       <div class="right">
     <div class="top">
