--- a/assignments/java7.html
+++ b/assignments/java7.html
@@ -18,8 +18,8 @@
     <div class="weather-app">
       <div class="left">
     <div class="temp"><span id="temp">0</span>&deg;</div> 
-    <div class="location"><span id="location">0</span></div>
-      </div>    
+<!--     <div class="location"><span id="q">Unknown</span></div>
+ -->      </div>    
       <div class="right">
     <div class="top">
       <img id="icon" width="75px" src="../img/codes/200.png" />
